# backend_projects

./: README.md
_013_notification_systems/notification_server/: Cargo.toml
_013_notification_systems/notification_server/src/: lib.rs  main.rs  make_connections.rs  view_router.rs
_013_notification_systems/notification_server/src/models/: device.rs  mod.rs  notification.rs  notification_deliverables.rs  user.rs
_013_notification_systems/notification_server/src/routes/: mod.rs
_013_notification_systems/notification_server/src/services/: background_enqueue_job.rs  mod.rs
_013_notification_systems/notification_server/src/utils/: app_state.rs  config.rs  errors.rs  mod.rs
_013_notification_systems/notification_worker/: Cargo.toml
_013_notification_systems/notification_worker/src/: lib.rs  main.rs  make_connections.rs
_013_notification_systems/notification_worker/src/services/: background_clean_streams.rs  create_notification_deliverables.rs  gateway_request.rs  get_join_notif_deliv.rs  init_workers.rs  mod.rs  process_job.rs  process_pending_jobs.rs  retry_mechanism.rs
_013_notification_systems/notification_worker/src/utils/: error.rs
_1_todo_app/: Cargo.toml  README.md
_1_todo_app/src/: lib.rs  main.rs  router.rs
_1_todo_app/src/middleware/: require_auth.rs
_1_todo_app/src/routes/: hello_world.rs
_1_todo_app/src/routes/tasks/: create_task.rs  create_task_extractor.rs  delete_task.rs  get_all_tasks.rs  get_one_task.rs  mod.rs  update_tasks.rs
_1_todo_app/src/routes/users/: create_user.rs  login.rs  logout.rs  mod.rs
_1_todo_app/src/utils/: app_error.rs  app_state.rs  hash.rs  jwt.rs  mod.rs
_2_personal_blogging/: .gitignore  Cargo.toml  README.md  create_posts_by_users.sh  create_users.sh  docker-compose.yml
_2_personal_blogging/database/: init.sql
_2_personal_blogging/src/: lib.rs  main.rs  routers.rs
_2_personal_blogging/src/middleware/: require_auth.rs
_2_personal_blogging/src/models/: comment_model.rs  mod.rs  post_model.rs  user.rs
_2_personal_blogging/src/routes/comments/: comment_extractor.rs  create_comment.rs  delete_comment.rs  fetch_comments.rs  mod.rs  update_comment.rs
_2_personal_blogging/src/routes/posts/: create_post.rs  delete_post.rs  get_posts.rs  mod.rs  post_extractor.rs  update_post.rs
_2_personal_blogging/src/routes/users/: create_user.rs  delete_user.rs  fetch_users.rs  login.rs  logout.rs  mod.rs  update_password.rs
_2_personal_blogging/src/utils/: app_state.rs  config.rs  errors.rs  jwt.rs  mod.rs
_3_weather_api_service/: .env-config  Cargo.toml  README.md  docker-compose.yml  weather-api.excalidraw
_3_weather_api_service/frontend/: .gitignore  index.html  package-lock.json  package.json
_3_weather_api_service/frontend/src/: fetch_weather_request.js  load_cities.js  main.js  map_point.js  style.css
_3_weather_api_service/src/: lib.rs  main.rs  router.rs
_3_weather_api_service/src/api_requests/: mod.rs  reverse_geo_coding.rs
_3_weather_api_service/src/middleware/: rate_limit.rs
_3_weather_api_service/src/models/: geofy_reverse_api_model.rs  mod.rs  weather_api_model.rs
_3_weather_api_service/src/queries/: geoadd.rs  georadius.rs  get_kv.rs  insert_kv.rs  mod.rs
_3_weather_api_service/src/routes/: get_weather_by_location.rs  location_extractor.rs  mod.rs
_3_weather_api_service/src/utils/: app_state.rs  config.rs  errors.rs  mod.rs  rate_limit.rs
_3_weather_api_service/src/weather_api_requests/: get_today_weather.rs
_4_nyc_restaurant_locator/: .gitignore  Cargo.toml  README.md  docker-compose.yml  ingest_data.py
_4_nyc_restaurant_locator/data/: init.sql
_4_nyc_restaurant_locator/frontend/: index.html  package-lock.json  vite.config.ts
_4_nyc_restaurant_locator/frontend/src/: create_restaurant_card.js  fetch_restaurants.js  load_map.js  main.js  pin_fetched_restauratns.js
_4_nyc_restaurant_locator/src/: lib.rs  main.rs  routers.rs
_4_nyc_restaurant_locator/src/models/: mod.rs  restaurant_db.rs
_4_nyc_restaurant_locator/src/routes/: fetch_all_restaurants.rs  mod.rs
_4_nyc_restaurant_locator/src/utils/: app_state.rs  errors.rs  mod.rs
_5_kv_stores/: .gitignore  (+4 more)
_5_kv_stores/kv_store/: Cargo.toml
_5_kv_stores/kv_store/src/: lib.rs  main.rs  routers.rs
_5_kv_stores/kv_store/src/data/: kvt_struct.rs  mod.rs
_5_kv_stores/kv_store/src/routes/: mod.rs
_5_kv_stores/kv_store/src/utils/: app_state.rs  errors.rs  mod.rs  read_logs.rs
_6_expense_tracker/: Cargo.toml  README.md  docker-compose.yml
_6_expense_tracker/database/: init.sql
_6_expense_tracker/src/: lib.rs  main.rs  routes.rs  view_routers.rs
_6_expense_tracker/src/middleware/: require_auth.rs
_6_expense_tracker/src/models/: expenses_models.rs  mod.rs  users_model.rs
_6_expense_tracker/src/routes/: mod.rs
_6_expense_tracker/src/routes/expenses/: create_expense.rs  delete_expense.rs  get_all_expenses.rs  get_expense_by_id.rs  mod.rs  update_expense.rs
_6_expense_tracker/src/routes/users/: activate_acc.rs  create_user.rs  delete_user.rs  get_user.rs  login.rs  logout.rs  mod.rs  update_password.rs  user_midd_extractor.rs
_6_expense_tracker/src/utils/: app_state.rs  config.rs  errors.rs  hash_helper.rs  jwt.rs  mod.rs
_8_tiny_url/bf_server/: Cargo.toml
_8_tiny_url/bf_server/src/: lib.rs  main.rs  router.rs
_8_tiny_url/bf_server/src/routes/: insert_key.rs  mod.rs  query_key.rs  save.rs
_8_tiny_url/bf_server/src/utils/: app_state.rs  error.rs
_8_tiny_url/tu_server/: Cargo.toml
_8_tiny_url/tu_server/src/: lib.rs  main.rs  view_routers.rs
_8_tiny_url/tu_server/src/middleware/: mod.rs  post_mid_extractor.rs  require_auth.rs
_8_tiny_url/tu_server/src/models/: mod.rs  tinyurl_model.rs  user_model.rs
_8_tiny_url/tu_server/src/routes/: mod.rs
_8_tiny_url/tu_server/src/utils/: app_state.rs  config.rs  errors.rs  hash_verify_pass.rs  jwt.rs  mod.rs
_9_distributed_message_queues/_2_queue_server/: Cargo.toml
_9_distributed_message_queues/_2_queue_server/src/: lib.rs  main.rs  view_routers.rs
_9_distributed_message_queues/_2_queue_server/src/models/: mod.rs  payload_req.rs  payload_send.rs
(+97 files in other folders)
