[package]
name = "_2_personal_blogging"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
thiserror = "2.0.14"
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = "0.3.19"
