[package]
name = "notification_worker"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
dotenv = "0.15.0"
redis = { version = "1.3.0", features = ["json", "tokio-comp"] }
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version="0.9.0",features = ["postgres", "runtime-tokio", "tls-native-tls", "chrono", "macros", "bigdecimal"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
