[package]
name = "bf_server"
version = "0.1.0"
edition = "2024"

[dependencies]
bloomfilter = { path = "../../_7_bloom_filter/bf_v4", package = "bf_v4"  }
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
clap = { version = "4.6.1", features = ["derive"] }
