[package]
name = "tu_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
argon2 = "0.5.3"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
dotenv = "0.15.0"
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }
redis = { version = "1.2.1", features = ["tokio-comp", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-native-tls", "chrono", "macros", "bigdecimal"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid7 = "1.7.0"
validator = { version = "0.20.0", features = ["derive"] }
